Updated to colab to retrieve planicie de paleocauces vector from github

--- a/Notebooks_clustering/Kmeans_StackNDVI.ipynb
+++ b/Notebooks_clustering/Kmeans_StackNDVI.ipynb
@@ -17,35 +17,73 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 364
         },
         "id": "b5tWjYqh_9XX",
-        "outputId": "7225c6d5-c4a0-40f7-b8e9-648d190a8910"
+        "outputId": "12e2269b-32b8-4b45-efaa-8da06615c5aa"
       },
       "id": "b5tWjYqh_9XX",
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "            <style>\n",
+              "                .geemap-dark {\n",
+              "                    --jp-widgets-color: white;\n",
+              "                    --jp-widgets-label-color: white;\n",
+              "                    --jp-ui-font-color1: white;\n",
+              "                    --jp-layout-color2: #454545;\n",
+              "                    background-color: #383838;\n",
+              "                }\n",
+              "\n",
+              "                .geemap-dark .jupyter-button {\n",
+              "                    --jp-layout-color3: #383838;\n",
+              "                }\n",
+              "\n",
+              "                .geemap-colab {\n",
+              "                    background-color: var(--colab-primary-surface-color, white);\n",
+              "                }\n",
+              "\n",
+              "                .geemap-colab .jupyter-button {\n",
+              "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+              "                }\n",
+              "            </style>\n",
+              "            "
+            ]
+          },
+          "metadata": {}
+        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Collecting rasterio\n",
-            "  Downloading rasterio-1.3.9-cp310-cp310-manylinux2014_x86_64.whl (20.6 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m20.6/20.6 MB\u001b[0m \u001b[31m45.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting affine (from rasterio)\n",
-            "  Downloading affine-2.4.0-py3-none-any.whl (15 kB)\n",
-            "Requirement already satisfied: attrs in /usr/local/lib/python3.10/dist-packages (from rasterio) (23.2.0)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from rasterio) (2024.2.2)\n",
-            "Requirement already satisfied: click>=4.0 in /usr/local/lib/python3.10/dist-packages (from rasterio) (8.1.7)\n",
-            "Requirement already satisfied: cligj>=0.5 in /usr/local/lib/python3.10/dist-packages (from rasterio) (0.7.2)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from rasterio) (1.25.2)\n",
-            "Collecting snuggs>=1.4.1 (from rasterio)\n",
-            "  Downloading snuggs-1.4.7-py3-none-any.whl (5.4 kB)\n",
-            "Requirement already satisfied: click-plugins in /usr/local/lib/python3.10/dist-packages (from rasterio) (1.1.1)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.10/dist-packages (from rasterio) (67.7.2)\n",
-            "Requirement already satisfied: pyparsing>=2.1.6 in /usr/local/lib/python3.10/dist-packages (from snuggs>=1.4.1->rasterio) (3.1.2)\n",
-            "Installing collected packages: snuggs, affine, rasterio\n",
-            "Successfully installed affine-2.4.0 rasterio-1.3.9 snuggs-1.4.7\n"
+            "  Downloading rasterio-1.4.3-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (9.1 kB)\n",
+            "Collecting affine (from rasterio)\n",
+            "  Downloading affine-2.4.0-py3-none-any.whl.metadata (4.0 kB)\n",
+            "Requirement already satisfied: attrs in /usr/local/lib/python3.11/dist-packages (from rasterio) (25.3.0)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.11/dist-packages (from rasterio) (2025.4.26)\n",
+            "Requirement already satisfied: click>=4.0 in /usr/local/lib/python3.11/dist-packages (from rasterio) (8.2.1)\n",
+            "Collecting cligj>=0.5 (from rasterio)\n",
+            "  Downloading cligj-0.7.2-py3-none-any.whl.metadata (5.0 kB)\n",
+            "Requirement already satisfied: numpy>=1.24 in /usr/local/lib/python3.11/dist-packages (from rasterio) (2.0.2)\n",
+            "Collecting click-plugins (from rasterio)\n",
+            "  Downloading click_plugins-1.1.1-py2.py3-none-any.whl.metadata (6.4 kB)\n",
+            "Requirement already satisfied: pyparsing in /usr/local/lib/python3.11/dist-packages (from rasterio) (3.2.3)\n",
+            "Downloading rasterio-1.4.3-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (22.2 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m22.2/22.2 MB\u001b[0m \u001b[31m83.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading cligj-0.7.2-py3-none-any.whl (7.1 kB)\n",
+            "Downloading affine-2.4.0-py3-none-any.whl (15 kB)\n",
+            "Downloading click_plugins-1.1.1-py2.py3-none-any.whl (7.5 kB)\n",
+            "Installing collected packages: cligj, click-plugins, affine, rasterio\n",
+            "Successfully installed affine-2.4.0 click-plugins-1.1.1 cligj-0.7.2 rasterio-1.4.3\n"
           ]
         }
       ]
@@ -62,7 +100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "95c7c71e-558b-4e8b-bc8e-a08c34d15cb3",
       "metadata": {
         "execution": {
@@ -73,9 +111,49 @@
           "shell.execute_reply.started": "2024-03-04T20:39:54.521701Z"
         },
         "tags": [],
-        "id": "95c7c71e-558b-4e8b-bc8e-a08c34d15cb3"
+        "id": "95c7c71e-558b-4e8b-bc8e-a08c34d15cb3",
+        "outputId": "7c8fe5c0-a43f-41d5-9b96-ea576837cdd4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "            <style>\n",
+              "                .geemap-dark {\n",
+              "                    --jp-widgets-color: white;\n",
+              "                    --jp-widgets-label-color: white;\n",
+              "                    --jp-ui-font-color1: white;\n",
+              "                    --jp-layout-color2: #454545;\n",
+              "                    background-color: #383838;\n",
+              "                }\n",
+              "\n",
+              "                .geemap-dark .jupyter-button {\n",
+              "                    --jp-layout-color3: #383838;\n",
+              "                }\n",
+              "\n",
+              "                .geemap-colab {\n",
+              "                    background-color: var(--colab-primary-surface-color, white);\n",
+              "                }\n",
+              "\n",
+              "                .geemap-colab .jupyter-button {\n",
+              "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+              "                }\n",
+              "            </style>\n",
+              "            "
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
         "import ee\n",
         "ee.Authenticate()\n",
@@ -84,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "60f5e2f5-8601-4509-9132-e1610558357b",
       "metadata": {
         "execution": {
@@ -95,9 +173,49 @@
           "shell.execute_reply.started": "2024-03-04T20:40:53.832505Z"
         },
         "tags": [],
-        "id": "60f5e2f5-8601-4509-9132-e1610558357b"
+        "id": "60f5e2f5-8601-4509-9132-e1610558357b",
+        "outputId": "574c17f0-3813-4264-f23d-e6be8790e818",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "            <style>\n",
+              "                .geemap-dark {\n",
+              "                    --jp-widgets-color: white;\n",
+              "                    --jp-widgets-label-color: white;\n",
+              "                    --jp-ui-font-color1: white;\n",
+              "                    --jp-layout-color2: #454545;\n",
+              "                    background-color: #383838;\n",
+              "                }\n",
+              "\n",
+              "                .geemap-dark .jupyter-button {\n",
+              "                    --jp-layout-color3: #383838;\n",
+              "                }\n",
+              "\n",
+              "                .geemap-colab {\n",
+              "                    background-color: var(--colab-primary-surface-color, white);\n",
+              "                }\n",
+              "\n",
+              "                .geemap-colab .jupyter-button {\n",
+              "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+              "                }\n",
+              "            </style>\n",
+              "            "
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
         "#importar librerías\n",
         "\n",
@@ -143,10 +261,10 @@
           "height": 17
         },
         "id": "kSm4HxJyDdZP",
-        "outputId": "ae256402-2972-4c9a-9a90-a308be6ebc24"
+        "outputId": "82926fc1-a3df-42d7-f94c-9553f1cd1fda"
       },
       "id": "kSm4HxJyDdZP",
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -275,18 +393,77 @@
     {
       "cell_type": "code",
       "source": [
-        "# Bajo de los Saladillos-20240217T005050Z-001 - https://drive.google.com/file/d/1jDaKszbfuIDwmKRaa85N4kKPzopD6IJl/view?usp=sharing\n",
-        "\n",
-        "#!gdown --id 1jDaKszbfuIDwmKRaa85N4kKPzopD6IJl\n",
-        "#!unzip BajodelosSaladillos-20240217T005050Z-001\n",
-        "\n",
-        "# Planicie con paleocauces NE-SW - https://drive.google.com/file/d/1FlXwNM-wLGYmKaXurD9rhPhSJxX9gNf9/view?usp=drive_link\n",
-        "\n",
-        "#!gdown --id 1FlXwNM-wLGYmKaXurD9rhPhSJxX9gNf9\n",
-        "#!unzip Planicie-con-paleocauces-NE-SW.zip\n",
-        "\n",
+        "!wget https://github.com/francobarrionuevoenv21/ClusteringArroceras_Incendios_SanJavier/blob/main/Primary_data/Planicie_con_paleocauces_NW-SW_4326.geojson"
+      ],
+      "metadata": {
+        "id": "AzsaRp9m5-qR",
+        "outputId": "8cdadb6f-a174-447e-a873-d033f674f7cb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 208
+        }
+      },
+      "id": "AzsaRp9m5-qR",
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "            <style>\n",
+              "                .geemap-dark {\n",
+              "                    --jp-widgets-color: white;\n",
+              "                    --jp-widgets-label-color: white;\n",
+              "                    --jp-ui-font-color1: white;\n",
+              "                    --jp-layout-color2: #454545;\n",
+              "                    background-color: #383838;\n",
+              "                }\n",
+              "\n",
+              "                .geemap-dark .jupyter-button {\n",
+              "                    --jp-layout-color3: #383838;\n",
+              "                }\n",
+              "\n",
+              "                .geemap-colab {\n",
+              "                    background-color: var(--colab-primary-surface-color, white);\n",
+              "                }\n",
+              "\n",
+              "                .geemap-colab .jupyter-button {\n",
+              "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+              "                }\n",
+              "            </style>\n",
+              "            "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2025-05-28 03:20:25--  https://github.com/francobarrionuevoenv21/ClusteringArroceras_Incendios_SanJavier/blob/main/Primary_data/Planicie_con_paleocauces_NW-SW_4326.geojson\n",
+            "Resolving github.com (github.com)... 140.82.116.4\n",
+            "Connecting to github.com (github.com)|140.82.116.4|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: unspecified [text/html]\n",
+            "Saving to: ‘Planicie_con_paleocauces_NW-SW_4326.geojson’\n",
+            "\n",
+            "Planicie_con_paleoc     [ <=>                ] 337.40K  --.-KB/s    in 0.03s   \n",
+            "\n",
+            "2025-05-28 03:20:25 (10.1 MB/s) - ‘Planicie_con_paleocauces_NW-SW_4326.geojson’ saved [345501]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "targetCRS = \"EPSG:4326\"\n",
-        "vectorPPCC = gpd.read_file('/content/Planicie con paleocauces NE-SW.shp').to_crs(targetCRS)"
+        "vectorPPCC = gpd.read_file('/content/Planicie_con_paleocauces_NW-SW_4326.geojson').to_crs(targetCRS)"
       ],
       "metadata": {
         "colab": {
