--- a/Notebooks_clustering/Kmeans_StackNDVI.ipynb
+++ b/Notebooks_clustering/Kmeans_StackNDVI.ipynb
@@ -7,12 +7,13 @@
         "id": "2a97854e-1104-414c-8369-50568dcb916a"
       },
       "source": [
-        "# Clasificación no supervisada con serie temporal NDVI de Terra/MODIS"
+        "# NDVI de Terra/MODIS Time Series Unsupervised Classification with Kmeans with GEE Python API (First attempt)"
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "# Install necessary packages in Colab\n",
         "!pip install rasterio"
       ],
       "metadata": {
@@ -20,10 +21,11 @@
         "outputId": "313b08d3-8fb4-4080-cdae-6e90bbf1e3a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "collapsed": true
       },
       "id": "b5tWjYqh_9XX",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -60,12 +62,12 @@
         "id": "037221fb-50e6-4b34-a7d9-1c849edc0dbf"
       },
       "source": [
-        "### Cargar librerías"
+        "## Import libraries"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "95c7c71e-558b-4e8b-bc8e-a08c34d15cb3",
       "metadata": {
         "execution": {
@@ -89,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "60f5e2f5-8601-4509-9132-e1610558357b",
       "metadata": {
         "execution": {
@@ -113,8 +115,19 @@
         "from shapely.geometry import shape\n",
         "from shapely.geometry import Point\n",
         "import rasterio\n",
-        "import random"
+        "import random\n",
+        "from google.colab import files"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data and layers importing"
+      ],
+      "metadata": {
+        "id": "l4B9STFrxiBV"
+      },
+      "id": "l4B9STFrxiBV"
     },
     {
       "cell_type": "markdown",
@@ -217,13 +230,13 @@
         "id": "180f5571-9ff7-4ea7-b220-d56fa127a7c5"
       },
       "source": [
-        "## MODIS NDVI data retrieving from GEE catalog\n",
+        "### MODIS NDVI data retrieving from GEE catalog\n",
         "#### https://developers.google.com/earth-engine/datasets/catalog/MODIS_061_MOD13Q1"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "b4c98ad6-9f10-46a4-b4f0-c7d3594dcc4b",
       "metadata": {
         "execution": {
@@ -269,7 +282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "1f145dcc-3a79-4430-9d86-fbb9fca15421",
       "metadata": {
         "execution": {
@@ -305,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "e96358c4-d132-46fe-9270-b6a538a1cd73",
       "metadata": {
         "execution": {
@@ -330,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "371e78f1-8b8b-40ea-b867-fe0debba660d",
       "metadata": {
         "execution": {
@@ -451,7 +464,7 @@
       "source": [
         "'''\n",
         "NOTE: The criteria for the number of classification clusters was defined as\n",
-        "five times the prior landcover classification types according to Clausser et al. (2023)\n",
+        "~6 times the prior landcover classification types according to Clausser et al. (2023)\n",
         "'''\n",
         "# Define the number of clusters for classification\n",
         "num_clusters = 50\n",
@@ -495,7 +508,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Visualize classification"
+        "### Output visualization"
       ],
       "metadata": {
         "id": "nIiI29EWzZMg"
@@ -521,7 +534,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Download the final classification"
+        "### Export the final classification"
       ],
       "metadata": {
         "id": "qdFL_HbezjZ4"
@@ -540,7 +553,7 @@
         "        image = MODIS_kmeans.toDouble(),\n",
         "        scale=scale,\n",
         "        region = featureCollection01.geometry().bounds(), # Or use custom ee.Geometry.Rectangle([minlon, minlat, maxlon, maxlat])\n",
-        "        description = 'MODIS_MOD13Q1_NDVI_kmeans50-17-04.tif',\n",
+        "        description = 'MODIS_MOD13Q1_NDVI_kmeans50-17-04', # Define the name of the exported file\n",
         "        crs = 'EPSG:4326',\n",
         "        maxPixels = 1e10, # Avoid limits in memory usage\n",
         "        fileFormat = \"GeoTIFF\",\n",
@@ -585,7 +598,7 @@
         "outputId": "1f31d149-4911-462f-da8d-dd00cd8efa26"
       },
       "id": "K2q5b8DwTDZn",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -664,7 +677,7 @@
         "outputId": "0bf78335-747f-459e-8789-52e2298b03cc"
       },
       "id": "HtTGPD-I_k9G",
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -718,7 +731,7 @@
         "outputId": "e5ed16dd-0432-45fa-c584-ae95377659f9"
       },
       "id": "-dcS-_u0FIgH",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -948,7 +961,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### -"
+        "### Data sampling from the original MODIS dataset to reconstruct the TS"
       ],
       "metadata": {
         "id": "IyCTYCXT_gak"
@@ -966,8 +979,6 @@
       "outputs": [],
       "source": [
         "modis_collection = MODIS\n",
-        "#modis_collection = MODIS.filterDate(\"2022-01-01\", \"2022-01-31\") #prueba con pocas imagenes\n",
-        "\n",
         "\n",
         "clusters = gdf[\"cluster\"].unique()\n",
         "\n",
@@ -999,9 +1010,7 @@
         "\n",
         "# Create a dataframe from the extracted data\n",
         "columns = [\"cluster\", \"longitude\", \"latitude\", \"date\"] + [\"NDVI\" + str(i) for i in range(1, len(ndvi_data[0]) - 3)]\n",
-        "ndvi_df = pd.DataFrame(ndvi_data, columns=columns)\n",
-        "\n",
-        "# NOTA: este paso para el Delta tarda unas 2 horas"
+        "ndvi_df = pd.DataFrame(ndvi_data, columns=columns)"
       ]
     },
     {
@@ -1014,7 +1023,7 @@
       },
       "outputs": [],
       "source": [
-        "#llenar los NoData con -2000 (igual que hicimos en la imagen con unmask, ahora lo hace en la tabla)\n",
+        "# Fill Nan values with -2000 (same as with the unmasking done before)\n",
         "ndvi_df = ndvi_df.fillna(-2000)"
       ]
     },
@@ -1027,8 +1036,8 @@
       },
       "outputs": [],
       "source": [
-        "# Display the dataFrame\n",
-        "ndvi_df"
+        "# Display the dataFrame (Optional)\n",
+        "#ndvi_df"
       ]
     },
     {
@@ -1052,8 +1061,8 @@
         "# Reset the index to make columns regular columns\n",
         "pivot_df.reset_index(inplace=True)\n",
         "\n",
-        "# Display the pivoted DataFrame\n",
-        "pivot_df"
+        "# Display the pivoted DataFrame (Optional)\n",
+        "#pivot_df"
       ]
     },
     {
@@ -1066,10 +1075,13 @@
       },
       "outputs": [],
       "source": [
-        "#export\n",
-        "pivot_df.to_csv(\"./kmeans_ndvi_pivot.csv\", index=False)\n",
+        "# Export the final csv\n",
+        "pivot_df.to_csv(\"kmeans_ndvi_pivot.csv\", index=False)\n",
+        "files.download('kmeans_ndvi_pivot.csv')\n",
         "\n",
-        "ndvi_df.to_csv(\"./kmeans_ndvi.csv\", index=False)"
+        "# Optional\n",
+        "#ndvi_df.to_csv(\"kmeans_ndvi.csv\", index=False)\n",
+        "#files.download('kmeans_ndvi.cs')"
       ]
     }
   ],
